# Q2

./: .env.example  .flake8  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCIES.md  DEVELOPER_GUIDE.md  DEVELOPMENT_SETUP_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  PHASE6_IMPLEMENTATION_SUMMARY.md  QUANTUM_AGI_ENHANCEMENTS.md  QUANTUM_AI_IMPLEMENTATION_SUMMARY.md  README.md  constraints.txt  demo_quantum_agi.py  demo_quantum_ai.py  final_security_report.json  openapi.json  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  security-report.json  validate_q2_platform.py
.github/workflows/: ci.yml
AgentSandbox/app/: main.py  sandbox_manager.py
AuthQ/app/: main.py
H2M/app/core/: orchestrator.py
IntegrationHub/app/core/: engine.py  flow_engine.py  pulsar_client.py
KnowledgeGraphQ/data/: agentq_details.md  q_platform_overview.md
QuantumPulse/: __init__.py
QuantumPulse/app/: main.py
QuantumPulse/app/api/endpoints/: chat.py  fine_tuning.py  inference.py  quantum_ai.py
QuantumPulse/app/config/: local_config.yaml
QuantumPulse/app/core/: config.py  pulsar_client.py
VectorStoreQ/: README.md
WorkflowWorker/: main.py
agentQ/: README.md  requirements.txt
agentQ/app/: main.py
agentQ/app/core/: optimized_react_loop.py
docs/: DOCUMENTATION_STANDARDS.md  INDEX.md  index.md
docs/api/: agentq.md  agentsandbox.md  authq.md  h2m.md  index.md  integrationhub.md  knowledgegraphq.md  managerq.md  quantumpulse.md  userprofileq.md  vectorstoreq.md  webappq.md  workflowengine.md
infra/docker/: Dockerfile.cpu  Dockerfile.gpu
managerQ/: README.md
managerQ/app/: config.py  dependencies.py  main.py  models.py
managerQ/app/api/: search.py
managerQ/app/core/: goal.py  goal_manager.py  goal_monitor.py  planner.py  user_workflow_store.py  workflow_executor.py  workflow_manager.py
managerQ/config/: local_config.yaml
q2/: __init__.py
q2/compute/: device.py  qvnn.py
q2/core/: config.py  logging.py  telemetry.py
q2/data/: api.py
scripts/: debug-service.py  dev-setup.sh  export_openapi.py  generate-api-docs.py  performance_benchmark.py  run-dev-platform.sh  run_scenario.py  scaffold-service.py  security_audit.py  validate-dev-env.sh  validate-docs.py
services/compute_api/: app.py
services/compute_api/routes/: qvnn.py
shared/: disaster_recovery.py  security_config.py
shared/advanced_analytics/: __init__.py  dashboard_engine.py  quantum_analytics_engine.py
shared/agent_swarms/: __init__.py  swarm_intelligence.py
shared/ai_governance/: __init__.py  ethics_framework.py
shared/ai_model_management/: __init__.py  ab_testing.py  manager.py  monitoring.py  versioning.py
shared/api_patterns/: __init__.py  middleware.py  responses.py  validation.py
shared/automl_pipeline/: __init__.py  pipeline_generator.py
shared/clients/: __init__.py  base.py  http.py
shared/config/: __init__.py  base.py  loader.py
shared/connection_pools/: __init__.py  pulsar_pool.py
shared/edge_ai/: __init__.py  deployment_manager.py
shared/error_handling/: __init__.py  circuit_breaker.py  exceptions.py  retry_patterns.py
shared/explainable_ai/: __init__.py  explanation_engine.py
shared/federated_learning/: __init__.py  federation_manager.py
shared/inter_service/: __init__.py  registry.py
shared/multi_tenant/: __init__.py  tenant_manager.py
shared/multimodal_ai/: __init__.py  multimodal_processor.py
shared/observability/: __init__.py  enhanced_logging.py  metrics.py
shared/performance/: cache.py  metrics.py  profiler.py
shared/q_pulse_client/: enhanced_client.py
shared/quantum_hybrid/: __init__.py  hybrid_optimizer.py  quantum_computer_vision.py  quantum_cryptography.py  quantum_drug_discovery.py  quantum_financial_modeling.py  quantum_ml_pipeline.py  quantum_nas_engine.py  quantum_nlp_engine.py
shared/security/: auth_utils.py  policies.py  secrets_manager.py
shared/workflow_orchestration/: __init__.py  conditions.py  engine.py  scheduler.py  templates.py
templates/docs/: ADR_TEMPLATE.md  SERVICE_README_TEMPLATE.md  TROUBLESHOOTING_TEMPLATE.md
tests/: __init__.py  conftest.py  test_ai_model_management.py  test_device.py  test_qvnn.py  test_workflow_orchestration.py  utils.py
tests/performance/: __init__.py
tests/security/: test_security_config.py
tests/unit/shared/: __init__.py
tests/unit/shared/config/: test_base.py  test_base_simple.py
